force-app/main/default/objects/Duplication_Configuration__c/Duplication_Configuration__c.object-meta.xml
<CustomObject>
    <label>Duplication Configuration</label>
    <nameField>
        <label>Duplication Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duplication Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>