force-app/main/default/objects/Duplication_Configuration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Status</label>
    <type>Checkbox</type>
</CustomField>