force-app/main/default/objects/Duplication_Configuration__c/fields/Block_On_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Block_On_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block On Duplicate</label>
    <type>Checkbox</type>
</CustomField>