force-app/main/default/objects/Duplication_Configuration__c/fields/Primary_Expression__c.field-meta.xml
<CustomField>
    <fullName>Primary_Expression__c</fullName>
    <label>Primary Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>