force-app/main/default/objects/Duplication_Configuration__c/fields/Primary_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object_API_Name__c</fullName>
    <label>Primary Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>