force-app/main/default/objects/Duplication_Configuration__c/fields/Related_Expression__c.field-meta.xml
<CustomField>
    <fullName>Related_Expression__c</fullName>
    <label>Related Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>