force-app/main/default/objects/Duplication_Configuration__c/fields/Related_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_API_Name__c</fullName>
    <label>Related Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>