force-app/main/default/objects/Duplication_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Primary_Object_API_Name__c</columns>
    <columns>Primary_Expression__c</columns>
    <columns>Related_Object_API_Name__c</columns>
    <columns>Related_Expression__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>